--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -73,11 +73,11 @@
           <div class="h2 site-header__logo">
         {% endif %}
           {% if section.settings.logo %}
-            {%- assign img_url = section.settings.logo | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
+            {%- assign img_url = section.settings.logo | image_url: width: 1, height: 1 | replace: '_1x1.', '_{width}x.' -%}
             <a href="{{ routes.root_url }}" class="site-header__logo-image{% if section.settings.align_logo == 'center' %} site-header__logo-image--centered{% endif %}" data-image-loading-animation>
               {% capture logo_alt %}{{ section.settings.logo.alt | default: shop.name }}{% endcapture %}
               <img class="lazyload js"
-                   src="{{ section.settings.logo | img_url: '300x300' }}"
+                   src="{{ section.settings.logo | image_url: width: 300, height: 300 }}"
                    data-src="{{ img_url }}"
                    data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
                    data-aspectratio="{{ section.settings.logo.aspect_ratio }}"
@@ -261,7 +261,7 @@
   "@type": "Organization",
   "name": {{ shop.name | json }},
   {% if section.settings.logo %}
-    {% assign image_size = section.settings.logo.width | append:'x' %}
+    {% assign image_size = section.settings.logo.width | append: 'x' %}
     "logo": {{ section.settings.logo | img_url: image_size | prepend: "https:" | json }},
   {% endif %}
   "sameAs": [
