--- a/sections/logo-bar.liquid
+++ b/sections/logo-bar.liquid
@@ -13,7 +13,7 @@
             <a href="{{ block.settings.link }}" class="logo-bar__link">
           {% endif %}
           {% if block.settings.image != blank %}
-            {{ block.settings.image | img_url: '160x160', scale: 2 | img_tag: block.settings.image.alt, 'logo-bar__image' }}
+            {{ block.settings.image | image_url: width: 320, height: 320 | img_tag: block.settings.image.alt, 'logo-bar__image' }}
           {% else %}
             {{ 'logo' | placeholder_svg_tag: 'placeholder-svg' }}
           {% endif %}
