--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -101,8 +101,8 @@
                         {%- endif -%}
                       {%- endcapture -%}
 
-                      <img class="product-single__thumbnail-image" src="{{ media.preview_image | img_url: '110x110', scale: 2 }}" alt="{{ thumbnailAlt }}">
-                      {%- if media.media_type == 'video' or media.media_type =='external_video' -%}
+                      <img class="product-single__thumbnail-image" src="{{ media.preview_image | image_url: width: 220, height: 220 }}" alt="{{ thumbnailAlt }}">
+                      {%- if media.media_type == 'video' or media.media_type == 'external_video' -%}
                         <div class="product-single__thumbnail-badge">
                           {% include 'icon-video-badge-full-color' %}
                         </div>
@@ -158,7 +158,7 @@
             {%- if current_variant.available == false %} product-form--variant-sold-out {%- endif -%}
           {%- endcapture %}
 
-          {% form 'product', product, class:form_classes, novalidate: 'novalidate', data-product-form: '' %}
+          {% form 'product', product, class: form_classes, novalidate: 'novalidate', data-product-form: '' %}
             {{ form | payment_terms }}
 
             {% unless product.has_only_default_variant %}
