--- a/snippets/product-card-grid.liquid
+++ b/snippets/product-card-grid.liquid
@@ -16,7 +16,7 @@
   {% capture img_id %}ProductCardImage-{{ section.id }}-{{ product.id }}{% endcapture %}
   {% capture wrapper_id %}ProductCardImageWrapper-{{ section.id }}-{{ product.id }}{% endcapture %}
   {%- assign preview_image = product.featured_media.preview_image -%}
-  {%- assign img_url = preview_image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
+  {%- assign img_url = preview_image | image_url: width: 1, height: 1 | replace: '_1x1.', '_{width}x.' -%}
 
   {% unless preview_image == blank %}
     {% include 'image-style', image: preview_image, height: max_height, wrapper_id: wrapper_id, img_id: img_id %}
