--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -33,7 +33,7 @@
              data-image-loading-animation
         ></div>
         <noscript>
-          <div class="collection-hero__image" style="background-image: url({{ collection.image | img_url: '2048x600', crop: 'top' }});"></div>
+          <div class="collection-hero__image" style="background-image: url({{ collection.image | image_url: width: 2048, height: 600, crop: 'top' }});"></div>
         </noscript>
         <div class="collection-hero__title-wrapper">
           <h1 class="collection-hero__title page-width">
@@ -139,7 +139,7 @@
 
       <ul class="grid grid--uniform{% if collection.products_count > 0 %} grid--view-items{% endif %}">
         {% for product in collection.products %}
-          <li class="grid__item grid__item--{{section.id}} {{ grid_item_width }}">
+          <li class="grid__item grid__item--{{ section.id }} {{ grid_item_width }}">
             {% include 'product-card-grid', max_height: max_height, product: product, show_vendor: section.settings.show_vendor %}
           </li>
         {% else %}
@@ -189,7 +189,7 @@
           The onboarding styles and products are only loaded if the
           store has no products.
           {% endcomment %}
-          {% if collection.handle == 'all' and collection.all_vendors.size == 0 and collection.all_types.size == 0%}
+          {% if collection.handle == 'all' and collection.all_vendors.size == 0 and collection.all_types.size == 0 %}
             {% for i in (1..4) %}
               <li class="list-view-item">
                 <a href="#" class="list-view-item__link">
