--- a/sections/featured-blog.liquid
+++ b/sections/featured-blog.liquid
@@ -17,11 +17,11 @@
                 {% if article.image %}
                   {% capture img_id %}ArticleImage-{{ article.image.id }}{% endcapture %}
                   {% capture img_wrapper_id %}ArticleImageWrapper-{{ article.image.id }}{% endcapture %}
-                  {%- assign img_url = article.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
+                  {%- assign img_url = article.image | image_url: width: 1, height: 1 | replace: '_1x1.', '_{width}x.' -%}
 
                   {% include 'image-style', image: article.image, height: 345, wrapper_id: img_wrapper_id, img_id: img_id %}
                   <div id="{{ img_wrapper_id }}" class="article__grid-image-wrapper js">
-                    <div class="article__grid-image-container" style="padding-top:{{ 1 | divided_by: article.image.aspect_ratio | times: 100}}%;" data-image-loading-animation>
+                    <div class="article__grid-image-container" style="padding-top:{{ 1 | divided_by: article.image.aspect_ratio | times: 100 }}%;" data-image-loading-animation>
                       <img id="{{ img_id }}"
                           class="article__grid-image lazyload"
                           data-src="{{ img_url }}"
@@ -33,7 +33,7 @@
                   </div>
                   <noscript>
                     <div class="article__grid-image-wrapper">
-                      {{ article | img_url: '345x345', scale: 2 | img_tag: article.title, 'article__grid-image' }}
+                      {{ article | image_url: width: 690, height: 690 | img_tag: article.title, 'article__grid-image' }}
                     </div>
                   </noscript>
                 {% endif %}
