--- a/snippets/media.liquid
+++ b/snippets/media.liquid
@@ -40,11 +40,11 @@
   {% case media.media_type %}
     {% when 'image' %}
       {% capture zoom_media_id %}ImageZoom-{{ section.id }}-{{ media.id }}{% endcapture %}
-      {%- assign img_url = media | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
+      {%- assign img_url = media | image_url: width: 1, height: 1 | replace: '_1x1.', '_{width}x.' -%}
       {% include 'image-style', height: height, wrapper_id: media_wrapper_id, img_id: media_id, image: media.preview_image %}
       <div
         id="{{ zoom_media_id }}"
-        style="padding-top:{{ 1 | divided_by: media.preview_image.aspect_ratio | times: 100}}%;"
+        style="padding-top:{{ 1 | divided_by: media.preview_image.aspect_ratio | times: 100 }}%;"
         class="product-single__media{% if product.media.size > 1 %} product-single__media--has-thumbnails{% endif %}{% if enable_image_zoom %} js-zoom-enabled{% endif %}"
         {% if enable_image_zoom %} data-image-zoom-wrapper data-zoom="{{ media | img_url: image_zoom_size, scale: image_scale }}"{% endif %}
         data-image-loading-animation>
