refactor theme to use from scratch, style up landing page

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,6 +1,1 @@
-{% comment %}
-  The contents of the cart.liquid template can be found in /sections/cart-template.liquid
-{% endcomment %}
-
-{% section 'cart-template' %}
-
+{% section 'cart-alternate' %}
