--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -1,30 +1,17 @@
-<div class="page-width text-center">
-  <div class="grid">
-    <div class="grid__item medium-up--one-half medium-up--push-one-quarter">
-      <div class="section-header">
-        <h1>{{ 'customer.activate_account.title' | t }}</h1>
-        <p>{{ 'customer.activate_account.subtext' | t }}</p>
-      </div>
-
-      <div class="form-vertical">
-        {% form 'activate_customer_password' %}
-
-          {%- if form.errors -%}
-            <div class="form-message form-message--error">
-              {{ form.errors | default_errors }}
-            </div>
-          {%- endif -%}
-
-          <label for="CustomerPassword" class="label--hidden">{{ 'customer.activate_account.password' | t }}</label>
-          <input type="password" value="" name="customer[password]" id="CustomerPassword" placeholder="{{ 'customer.activate_account.password' | t }}">
-
-          <label for="CustomerPasswordConfirmation" class="label--hidden">{{ 'customer.activate_account.password_confirm' | t }}</label>
-          <input type="password" value="" name="customer[password_confirmation]" id="CustomerPasswordConfirmation" placeholder="{{ 'customer.activate_account.password_confirm' | t }}">
-
-          <input type="submit" class="btn" value="{{ 'customer.activate_account.submit' | t }}">
-          <div><input type="submit" name="decline" value="{{ 'customer.activate_account.cancel' | t }}"></div>
-        {% endform %}
-      </div>
-    </div>
-  </div>
+<!-- /templates/customers/activate_account.liquid -->
+{% form 'activate_customer_password' %}
+{{ form.errors | default_errors }}
+<div class="password">
+  <label for="password">Password</label>
+  <input type="password" name="customer[password]" />
 </div>
+<div class="password_confirm">
+  <label for="password_confirmation">Password Confirmation</label>
+  <input type="password" name="customer[password_confirmation]" />
+</div>
+<div class="action_bottom">
+  <input type="submit" value="Activate Account" />
+  <span>or</span>
+  <input type="submit" name="decline" value="Decline Invitation" />
+</div>
+{% endform %}
