--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -1,31 +1,20 @@
-<div class="page-width">
-  <div class="grid">
-    <div class="grid__item medium-up--one-half medium-up--push-one-quarter">
-      <div class="section-header">
-        <div class="form-vertical">
-          {% form 'reset_customer_password' %}
+<!-- /templates/customers/reset_password.liquid -->
 
-            <h1 class="text-center">{{ 'customer.reset_password.title' | t }}</h1>
+{% form 'reset_customer_password' %}
 
-            <p class="text-center">{{ 'customer.reset_password.subtext' | t: email: email }}</p>
+{{ form.errors | default_errors }}
 
-            {%- if form.errors -%}
-              <div class="form-message form-message--error">
-                {{ form.errors | default_errors }}
-              </div>
-            {%- endif -%}
+<label for="password">Password</label>
+<input type="password" value="" name="customer[password]" size="16" />
 
-            <label for="ResetPassword">{{ 'customer.reset_password.password' | t }}</label>
-            <input type="password" value="" name="customer[password]" id="ResetPassword" class="{% if form.errors contains 'password' %} input--error{% endif %}">
+<label for="password_confirmation">Password Confirmation</label>
+<input
+  type="password"
+  value=""
+  name="customer[password_confirmation]"
+  size="16"
+/>
 
-            <label for="PasswordConfirmation">{{ 'customer.reset_password.password_confirm' | t }}</label>
-            <input type="password" value="" name="customer[password_confirmation]" id="PasswordConfirmation" class="{% if form.errors contains 'password_confirmation' %} input--error{% endif %}">
+<input type="submit" value="Reset Password" />
 
-            <input type="submit" class="btn text-center" value="{{ 'customer.reset_password.submit' | t }}">
-          {% endform %}
-        </div>
-
-      </div>
-    </div>
-  </div>
-</div>
+{% endform %}
