change reference to load stylesheet in liquid:

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Rubik&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/application.css" type="text/css">
+    {{ 'application.css' | asset_url | stylesheet_tag }}
   </head>
   
   <body class="template-{{ template }}">
