--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -49,7 +49,7 @@
               {% endfor %}
             </select>
             <div class="select-arrow">
-              <img src="{{'icon-arrow-down.svg' | 'asset_url'}}" alt="">
+              <img src="{{'icon-arrow-down.svg' | asset_url }}" alt="">
             </div>
           </div>
 
