--- a/assets/application.css
+++ b/assets/application.css
@@ -44,7 +44,7 @@ button,
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
     color: var(--black);
@@ -111,7 +111,7 @@ button {
     font-size: var(--body-font-size);
     line-height: var(--line-global);
     padding: var(--line-global);
-    background: var(--color-accent);
+    background: var(--black);
     color: var(--white);
 }
 
@@ -165,8 +165,8 @@ button {
 .sticky-side-image {
     position: fixed;
     left: 0;
-    top: var(--gutter-global);
-    bottom: var(--gutter-global);
+    top: 0;
+    bottom: 0;
     width: calc(50% - (var(--gutter-global) / 2));
 }
 
@@ -177,20 +177,32 @@ button {
 }
 
 .main-content {
-    height: 90%;
     width: calc(50% + (var(--gutter-global) / 2));
     margin-left: auto;
     padding: var(--gutter-global);
+    grid-template-rows: minmax(max-content, auto) minmax(min-content, max-content);
 }
 
 /* global styles */
 
-.link-to-cart {
+.cart-item-count {
+    color: var(--white);
+    text-align: center;
+    border-radius: 50%;
+}
+
+.link-to-cart, 
+.link-to-home {
     position: fixed;
     top: 0;
     right: 0;
     padding: var(--gutter-global);
     color: var(--color-text);
+}
+
+.link-to-home {
+    color: var(--black);
+    z-index: 1;
 }
 
 .link-to-cart .cart-item-count {
@@ -200,7 +212,7 @@ button {
     height: 10px;
     margin-top: 4px;
     background: var(--color-border);
-    border-radius: 50%;
+    
 }
 
 .link-to-cart .cart-text {
@@ -220,15 +232,11 @@ button {
     height: 20px;
     width: 20px;
     font-size: var(--label-font-size);
-    color: var(--white);
+    
     margin-top: 0;
-    text-align: center;
 }
 
 /* Index classes */
-#product-info {
-    grid-template-rows: minmax(max-content, auto) minmax(min-content, max-content);
-}
 
 .headline {
     padding-bottom: calc(var(--line-global) * 3);
@@ -236,6 +244,7 @@ button {
 
 .form-wrapper {
     padding-top: calc(var(--line-global) * 3);
+    padding-bottom: calc(var(--line-global) * 3); ;
 }
 
 .description-content {
@@ -244,4 +253,150 @@ button {
 
 #add-to-cart .product-price{
     float: right;
+}
+
+#add-to-cart {
+    background: var(--color-accent);
+}
+
+/* CART STYLES */
+
+#cart {
+    background: var(--color-empty-bg);
+    color: var(--white);
+}
+
+#cart.cart-filled {
+    background: var(--color-accent);
+}
+
+#cart a {
+    color: inherit;
+}
+
+#cart-title {
+    position: relative;
+}
+
+#cart:not(.cart-filled) #cart-title {
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-color: var(--white);
+    -webkit-text-stroke-width: 2px;
+    -moz-text-fill-color: transparent;
+    -moz-text-stroke-color: var(--white);
+    -moz-text-stroke-width: 2px;
+}
+
+#cart .cart-item-count {
+    display: block;
+    font-size: 0.06em;
+    border: 2px solid var(--white);
+    width: 1.8em;
+    height: 1.8em;
+    line-height: 1.8em;
+    position: absolute;
+    top: 2em;
+    right: 0;
+}
+
+#cart.cart-filled .cart-item-count {
+    background: var(--black);
+    border: none;
+}
+
+#cart-empty-lines, #back-to-fitra {
+    grid-column: 2;
+}
+
+.empty-line {
+    border-top: 1px solid var(--white);
+    height: calc(var(--line-global) * 3);
+}
+
+.empty-line:first-child {
+    margin-top: var(--line-global);
+}
+
+.empty-line:last-child {
+    border-bottom: 1px solid var(--white);
+}
+
+#back-to-fitra {
+    margin-bottom: var(--line-global);
+}
+
+#cart-lines {
+
+}
+
+table {
+    table-layout: fixed;
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+}
+
+th {
+    text-align: left;
+    font-weight: 400;
+    padding: var(--line-global) 0;
+}
+
+tbody tr {
+    border-top: 1px solid var(--white);
+}
+
+td {
+    padding: var(--line-global) 0;
+    position: relative;
+}
+
+td:last-child {
+    text-align: right;
+    vertical-align: top;
+}
+.remove-line {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    padding: var(--line-global) calc(var(--line-global) / 2) ;
+    display: block;
+    text-align: center;
+    width: var(--gutter-global);
+}
+
+.remove-text {
+    position: absolute;
+    top: 0;
+    right: 100%;
+    padding: var(--line-global);
+    display: none;
+    background: var(--color-accent);
+    color: var(--black);
+}
+
+.remove-line:hover .remove-text {
+    display: block;
+}
+
+#cart-content {
+    padding-bottom: calc(var(--line-global) * 2);
+}
+
+#cart-totals {
+    margin-bottom: calc(var(--line-global )* 4);
+    border-bottom: 1px solid var(--white);
+}
+
+#cart-support p {
+    color: inherit;
+}
+
+#cart-form-wrap {
+    grid-row: span 2;
+}
+
+#checkout-button {
+    text-align: center;
+    grid-row: 2;
 }
