--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Rubik&display=swap" rel="stylesheet">
     {{ 'application.css' | asset_url | stylesheet_tag }}
+    {{'application.js' | asset_url | script_tag }}
   </head>
   
   <body class="template-{{ template }}">
