--- a/sections/cart-alternate.liquid
+++ b/sections/cart-alternate.liquid
@@ -1,48 +1,81 @@
-<h1>{{'cart.general.title' | t }}<span class="cart-item-count"> {{cart.item_count}} </span> </h1>
-  {% if cart.item_count > 0 %}
-    <h2>{{'cart.general.preorder_info' | t }}</h2>
-    <form action="/cart" method="POST" novalidate>
-      <table>
-        <thead>
-          <th colspan="2">{{'cart.general.summary' | t }}</th>
-        </thead>
-        {% for item in cart.items %}
-          <tr>
-            <td>
-              {% if item.quantity > 1 %}
-                {{item.quantity}}x
-              {% endif %}
-              {{item.product.title}} &ndash; {{item.variant.title}}
-            </td>
-            <td>
-              {{item.line_price | money}}
-              <a href="/cart/change?line={{ forloop.index }}&amp;quantity=0">X</a>
-            </td>
-          </tr>
+<div id="page-cart">
+  <div class="sticky-side-image">
+    <img src="{{ 'Hero-Cart.jpg' | asset_url}}" alt="fitra activity band">
+    {%- comment -%} {% for image in mainProduct.images %}
+    {{ image | img_url: 'large' | img_tag }}
+    {% endfor %} {%- endcomment -%}
+  </div>
+  <div id="cart" class="main-content grid {% if cart.item_count > 0 %}cart-filled{%endif%}">
+    <div class="valign-center">
+      <h1 id="cart-title"  class="headline-big">
+        {{ "cart.general.title" | t}}
+        <span class="cart-item-count"> {{ cart.item_count }} </span>
+      </h1>
+    </div>
+    <div id="cart-content" class="grid two-columns">
+      {% if cart.item_count > 0 %}
+      <div class="valign-bottom">
+        <h2>{{ "cart.general.preorder_info" | t }}</h2>
+      </div>
+      <div id="cart-form-wrap">
+        <form action="/cart" method="POST" novalidate>
+          <table id="cart-lines">
+            <thead>
+              <th colspan="2">{{ "cart.general.summary" | t }}</th>
+            </thead>
+            {% for item in cart.items %}
+            <tr>
+              <td>
+                {% if item.quantity > 1 %}
+                {{ item.quantity }}x {% endif %} {{ item.product.title | remove: ' Activity Band' }} &ndash;
+                {{ item.variant.title }}
+              </td>
+              <td>
+                {{ item.line_price | money }}
+                <a class="remove-line" href="/cart/change?line={{ forloop.index }}&amp;quantity=0">
+                  <span class="remove-text">{{'cart.general.remove' | t }}</span>
+                  <img class="remove-x" src="{{'icon-x.svg' | asset_url}}" alt="remove button">
+                </a>
+              </td>
+            </tr>
+            {% endfor %}
+          </table>
+          <table id="cart-totals">
+            <tbody>
+              <tr>
+                <td>{{ "cart.general.shipping" | t }}</td>
+                <td>{{ "cart.general.free" | t }}</td>
+              </tr>
+              <tr>
+                <td>{{ "cart.general.subtotal" | t }}</td>
+                <td>{{ cart.total_price | money }}</td>
+              </tr>
+            </tbody>
+          </table>
+          <button id="checkout-button" type="submit" name="checkout">
+            {{ "cart.general.checkout" | t }}
+          </button>
+        </form>
+      </div>
+      <div id="cart-support">
+        <p>
+          {{ "cart.general.support_title" | t }}
+          <a href="mailto:{{ 'cart.general.support_email' | t }}">{{"cart.general.support_email" | t}}</a>
+        </p>
+      </div>
+
+      {% else %}
+      <div id="cart-empty-lines">
+        {{ "cart.general.empty" | t }}
+        {% for i in (1..3) %}
+        <div class="empty-line"></div>
         {% endfor %}
-      </table>
-      <table id="cart-totals">
-        <tbody>
-          <tr>
-            <td>{{'cart.general.shipping' | t }}</td>
-            <td>{{'cart.general.free' | t }}</td>
-          </tr>
-          <tr>
-            <td>{{'cart.general.subtotal' | t }}</td>
-            <td>{{ cart.total_price | money}}</td>
-          </tr>
-        </tbody>
-      </table>
-      <button type="submit" name="checkout">{{'cart.general.checkout' | t }}</button>
-    </form>
-    <p>
-      {{'cart.general.support_title' | t }}
-      <a href="mailto:{{'cart.general.support_email' | t }}">{{'cart.general.support_email' | t }}</a>
-    </p>
-    {% else %}
-      {{'cart.general.empty' | t }}
-      {% for i in (1..3)  %}
-        <div class="empty-line"> line</div>
-      {% endfor %}
-      <a href="/">{{'cart.general.back' | t }}</a>
-  {% endif %}
+      </div>
+
+      <div id="back-to-fitra" class="valign-bottom">
+        <a href="/">{{ "cart.general.back" | t }}</a>
+      </div>
+      {% endif %}
+    </div>
+  </div>
+</div>
