--- a/assets/application.css
+++ b/assets/application.css
@@ -44,7 +44,7 @@ button,
 html,
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     color: var(--black);
@@ -177,6 +177,7 @@ button {
 }
 
 .main-content {
+    height: 100%;
     width: calc(50% + (var(--gutter-global) / 2));
     margin-left: auto;
     padding: var(--gutter-global);
@@ -399,4 +400,79 @@ td:last-child {
 #checkout-button {
     text-align: center;
     grid-row: 2;
+}
+
+/* 404 PAGE */
+
+#content-404 a {
+    color: var(--black);
+}
+
+.grid > * {
+  min-width: 0;
+  min-height: 0;
+}
+
+@media only screen and (max-width:1023px) {
+    :root{
+    --add-to-cart-form-height: 143px;
+    }
+
+    .sticky-side-image {
+        position: static;
+        width: 100%;
+        height: 90vw;
+    }
+
+    .main-content {
+        min-height: 0;
+        padding: var(--line-global);
+        width: 100%;
+        margin: 0 auto;
+        grid-template-rows: auto; 
+    }
+
+    .grid {
+        grid-row-gap: var(--line-global);
+    }
+
+    .headline {
+        padding-bottom: 0;
+    }
+
+    .headline-big {
+        font-size: 40vw;
+    }
+
+    .two-columns {
+        grid-template-columns: 1fr;
+    }
+
+    .form-wrapper {
+        height: calc(var(--add-to-cart-form-height) - var(--line-global));
+    }
+
+    #add-to-cart-form {
+        position: fixed;
+        padding: 0 var(--line-global);
+        background: var(--white);
+        height: var(--add-to-cart-form-height);
+        bottom: 0;
+        left: 0;
+        margin: 0;
+        width: 100%;
+    }
+
+    #cart-lines td:last-child {
+        right: var(--line-global);
+    }
+
+    #cart.cart-filled #cart-content {
+        padding-bottom: 0;
+    }
+
+    #checkout-button {
+        position: static;
+        margin-top: var(--line-global);
+    }
 }
